--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>A Pen by  beccasafan</title>
+  <title>Harry Styles Live On Tour - Concert Connector</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -15,7 +15,7 @@ body,
   height: 100%;
 }
 .full-bg-img {
-  background: url('http://static.tumblr.com/wvzujvn/HKJop8naw/hs_cover.jpg') no-repeat center center fixed;
+  background: url('https://static.tumblr.com/wvzujvn/HKJop8naw/hs_cover.jpg') no-repeat center center fixed;
   background-size: cover;
   position: fixed;
   overflow: hidden;
