--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@ body,
 </head>
 
 <body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-98598808-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   <div class="full-bg-img flex-center"></div>
 <div id="concert-connector" class="container">
  <div id="title" class="text-center">
@@ -162,7 +172,6 @@ body,
                 })
             };
         }));
-        this.selectedConcertIndex(1);
     };
     ConcertConnector.prototype.showConcert = function (index) {
         var concert = this.getConcert(index);
