--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@ body,
   width: 100%;
   z-index: -1;
 }
-#title h3 {
+#title {
   color: white;
+}
+#title p {
+    font-size: 0.8rem;
 }
 #concert-selected {
   border: 1px solid transparent;
@@ -35,7 +38,7 @@ body,
 }
 .card img {
   width: 100%;
-  border-radius: .25rem 0 0 .25rem;
+  border-radius: 0.25rem;
 }
 .card .card-subtitle {
   margin-bottom: 0.75rem;
@@ -47,7 +50,12 @@ body,
   align-items: center;
   justify-content: center;
 }
+
+#add-your-name {
+    display: inline-block;
+}
 .footer {
+    font-size: 0.6rem;
   color: white;
 }
 </style>
@@ -69,6 +77,10 @@ body,
 <div id="concert-connector" class="container">
  <div id="title" class="text-center">
   <h3 class="my-3">Harry Styles Live On Tour - Concert Connector</h3>
+  <p>Connect with other fans attending Harry's tour! Select the concert you're attending from the list below, and add your Tumblr username. Then check out everybody else going to the same concert as you.</p>
+  <p>Contact beccasafan on Tumblr or Twitter if you have any questions or need anything changed/removed.</p>
+ </div>
+ <div>
  </div>
  <select id="concerts-list" class="form-control" data-bind="options: concerts, optionsText: 'title', value: selectedConcertIndex, optionsValue: 'index', optionsCaption: 'Select a concert...'">
 	</select>
@@ -77,7 +89,7 @@ body,
   <div class="card my-3">
    <div class="row no-gutters">
     <div class="col-sm-12 col-md-8">
-     <div class="concert-meta text-center">
+     <div class="card-block concert-meta text-center">
       <h3 class="card-title" data-bind="text: venue">	</h3>
       <h4 class="card-subtitle" data-bind="text: location"></h4>
       <h5 class="card-subtitle" data-bind="text: date"></h5>
@@ -85,16 +97,16 @@ body,
     </div>
     <div class="col-sm-12 col-md-4">
      <img data-bind="attr: { src: image }" />
-     <div class="google-maps--view card-footer text-center">
-      <a target="_blank" data-bind="attr: { href: $parent.getGoogleMapsLink($data) }">View in Google Maps</a>
-     </div>
+     <!--<div class="google-maps--view card-footer text-center">
+      <a target="_blank" data-bind="click: $parent.trackMapClick.bind($parent), attr: { href: $parent.getGoogleMapsLink($data) }">View in Google Maps</a>
+     </div>-->
     </div>
    </div>
   </div>
   <div class="card mt-3">
    <div class="card-block">
     <div class="col-sm-12">
-     <div class="pb-3"><a data-bind="attr: { href: $parent.getGoogleFormsLink($data) }">Add your name</a></div>
+     <div id="add-your-name" class="pb-3 alert alert-success"><a target="_blank" class="alert-link" data-bind="click: $parent.trackSignupClick.bind($parent), attr: { href: $parent.getGoogleFormsLink($data) }">Add your name</a></div>
      
      <div>
       <table class="table table-striped">
@@ -140,11 +152,39 @@ body,
         this.apiKey = "AIzaSyCc-3LbhBwF_eRD6d8cZ-iqLtKM2E2V8TY";
         this.concerts = ko.observableArray();
         this.selectedConcertIndex = ko.observable();
-        this.selectedConcert = ko.computed(function () { return _this.selectedConcertIndex() != null ? _this.getConcert(_this.selectedConcertIndex()) : null; });
+        this.selectedConcertIndex.subscribe(function(newValue) { 
+            ga("send", "event", "Main", "view", _this.selectedConcertIndex());
+        });
+        this.lastConcertIndex = null;
+
+        this.selectedConcert = ko.computed(function () {
+            var index = _this.selectedConcertIndex();
+console.log(_this.lastConcertIndex, index);
+            if (_this.lastConcertIndex != index) {
+                if (_.isEmpty(index)) {
+                    document.title = "Harry Styles Live On Tour - Concert Connector";
+                    history.pushState({index: index}, "", null);
+                    return null;
+                }
+                else {
+                    var concert = _this.getConcert(index);
+                    document.title = "Harry Styles Live On Tour - Concert Connector - " + concert.title;
+                    history.pushState({index: index}, "", "#/" + index);
+                    return concert;
+                } 
+            }
+
+            _this.lastConcertIndex = index;
+        });
         $(function () {
             $.get(_this.getTableUrl()).done(function (data) { return _this.loadData(data); });
         });
+        
+        window.onpopstate = function(e) { console.log("popstate", e); _this.loadState(e.state.index); };
     }
+    ConcertConnector.prototype.loadState = function(index) {
+        this.selectedConcertIndex(index);
+    };
     ConcertConnector.prototype.getTableUrl = function () {
         return "https://www.googleapis.com/fusiontables/v2/query?sql=SELECT * FROM " + this.tableId + " ORDER BY Index&key=" + this.apiKey;
     };
@@ -172,21 +212,33 @@ body,
                 })
             };
         }));
-    };
-    ConcertConnector.prototype.showConcert = function (index) {
-        var concert = this.getConcert(index);
-        ;
-        console.log(index, concert);
+
+        if (history.state != null) {
+            this.loadState(history.state.index);
+        }
+        if (window.location.hash != null) {
+            this.loadState(window.location.hash.replace("#/", ""));
+        }
+
     };
     ConcertConnector.prototype.getConcert = function (index) {
         return _.find(this.concerts(), function (c) { return index === c.index; });
     };
     ConcertConnector.prototype.getGoogleMapsLink = function (concert) {
-        return "https://maps.google.com/maps/place/" + concert.venue + ", " + concert.location + "/@" + concert.latLng;
+        return "https://google.com/maps/place/" + concert.venue.replace(new RegExp(" ", "g"), "+") ; // + "/@" + concert.latLng.replace(" ", "");
     };
     ConcertConnector.prototype.getGoogleFormsLink = function(concert) {
         return "https://docs.google.com/forms/d/e/1FAIpQLSdROr7C-2jJ6-xjZodDw6ykHxPd97g2wiqongSAWZFhoPDHCA/viewform?usp=pp_url&entry.573869022=" + concert.title;
     };
+    ConcertConnector.prototype.trackMapClick = function() {
+        ga("send", "event", "Main", "map", this.selectedConcertIndex());
+        return true;
+    }
+    ConcertConnector.prototype.trackSignupClick = function() {
+        console.log(this);
+        ga("send", "event", "Main", "signup", this.selectedConcertIndex());
+        return true;
+    }
     return ConcertConnector;
 }());
 var concertConnector = new ConcertConnector();
