--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ body,
       <table class="table table-striped">
        <thead>
         <tr>
-         <th style="width: 50%;">Name</th>
+         <th style="width: 50%;">Tumblr Name</th>
          <th>Section</th>
         </tr>
        </thead>
