--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
       <h1>Beccasafan's Concert Connectors</h1>
 
       <div class="connectors">
-        <h3><a href="harry">Harry Styles Live On Tour</a></h3>
-        <h3><a href="niall">Niall Horan Flicker Sessions</a></h3>
+        <!--<h3><a href="harry">Harry Styles Live On Tour</a></h3> -->
+        <h3><a href="louis">Louis Tomlinson World Tour</a></h3>
+        <h3><a href="niall">Niall Horan Nice To Meet Ya Tour</a></h3>
       </div>
     </div>
   </div>
