--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <!--<h3><a href="harry">Harry Styles Live On Tour</a></h3> -->
         <h3><a href="louis">Louis Tomlinson World Tour</a></h3>
         <h3><a href="niall">Niall Horan Nice To Meet Ya Tour</a></h3>
+        <h3><a href="harry">Harry Styles Love on Tour</a></h3>
       </div>
     </div>
   </div>
